@@ -221,6 +221,8 @@
                             com.swardana.nayanika/com.swardana.nayanika.gui.menu=ALL-UNNAMED
                         --add-opens
                             com.swardana.nayanika/com.swardana.nayanika.gui.menu.menubar=ALL-UNNAMED
+                        --add-opens
+                            com.swardana.nayanika/com.swardana.nayanika.gui.menu.toolbar=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
